--- a/src/javascript/templates/patient1/patient1View26.hbs
+++ b/src/javascript/templates/patient1/patient1View26.hbs
@@ -59,23 +59,27 @@
                 <img src="images/doctor_and_microscope2.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
                     <p>
-                      <strong>Step 4</strong>
-  The medium that contains the fluorescent dye is applied to the slide.
-                    </p>
-                      <span class="left-arrow"><a data-navigate="patient1view26" >&#8594;</a></span>
+                      <strong>Step 5</strong>
+    The fluorescence is observed using a fluorescence microscope.
+
+  </p>
+                      <span class="left-arrow"><a data-navigate="patient1view27" >&#8594;</a></span>
 
                 </div>
+                <p>
+                  Now you’re ready to observe the fluorescence micrograph!
+                </p>
             </div>
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view24" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view25" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
                   </div>
                   <div class="col-md-4">
-                    <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
