--- a/src/javascript/templates/patient1/patient1View27.hbs
+++ b/src/javascript/templates/patient1/patient1View27.hbs
@@ -51,25 +51,32 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Velma’s doctors have sent her tissue sample for HER2 FISH testing.        </blockquote>
+  Observe the fluorescence micrograph for HER2 FISH testing.        </blockquote>
         <main id="content-main" class="row patient-1 svg-test">
 
         <h2>Conducting the HER2 FISH Test:</h2>
+        <p>
+        Look at each cell nucleus (depicted in blue).
+Count the number of red dots (HER2) and the number of green dots (CEP17).
+If the red areas are at least or greater than 2 times the number of green areas, the test result for HER2 FISH is amplified.
+In this example. the ratio of red dots to green dots is 6:2, or 3.  This means that HER2 is amplified.
+
+</p>
             <div class="svg-container">
-                <img src="images/doctor_and_microscope2.jpg" alt="cell biopsy slide 3" />
+                <img src="images/Microscope_GreenRedDots_6_2.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
-                    <p>
-                      <strong>Step 4</strong>
-  The medium that contains the fluorescent dye is applied to the slide.
-                    </p>
-                      <span class="left-arrow"><a data-navigate="patient1view26" >&#8594;</a></span>
+
+                      <span class="left-arrow"><a data-navigate="patient1view28" >&#8594;</a></span>
 
                 </div>
+                <p>
+                  Now you’re ready to observe the fluorescence micrograph!
+                </p>
             </div>
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view24" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view26" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
