--- a/src/javascript/templates/patient1/patient1View28.hbs
+++ b/src/javascript/templates/patient1/patient1View28.hbs
@@ -51,25 +51,36 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Velma’s doctors have sent her tissue sample for HER2 FISH testing.        </blockquote>
+  Observe the fluorescence micrograph for HER2 FISH testing.        </blockquote>
         <main id="content-main" class="row patient-1 svg-test">
 
         <h2>Conducting the HER2 FISH Test:</h2>
+        <p>
+      Velma’s HER2 FISH Test results are in!
+</p>
+<p>
+  Click on the microscope to analyze Velma’s HER2 FISH test and calculate the ratio of red dots to green dots.
+Should the test results be reported as amplified or not amplified?<br><br>
+<strong>Be sure to record the results in your Lab Handbook.
+</strong>
+
+</p>
+
             <div class="svg-container">
-                <img src="images/doctor_and_microscope2.jpg" alt="cell biopsy slide 3" />
+                <img src="images/Microscope_GreenRedDots_6_5.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
-                    <p>
-                      <strong>Step 4</strong>
-  The medium that contains the fluorescent dye is applied to the slide.
-                    </p>
-                      <span class="left-arrow"><a data-navigate="patient1view26" >&#8594;</a></span>
+
+                      <span class="left-arrow"><a data-navigate="patient1view29" >&#8594;</a></span>
 
                 </div>
+                <p>
+                  Now you’re ready to observe the fluorescence micrograph!
+                </p>
             </div>
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view24" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view27" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
