--- a/src/javascript/templates/patient1/patient1View29.hbs
+++ b/src/javascript/templates/patient1/patient1View29.hbs
@@ -51,31 +51,28 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Velma’s doctors have sent her tissue sample for HER2 FISH testing.        </blockquote>
-        <main id="content-main" class="row patient-1 svg-test">
+The OncoType DX® Test helps determine if a patient will benefit from chemotherapy as well as hormone blocking therapy.
+       </blockquote>
+        <main id="content-main" class="row patient-1">
+<p>
+If a patient has an ER positive tumor, HER2 is not amplified, and no lymph nodes are involved, an OncoType DX® Test is needed.
+This test is based on the amount genes are expressed. Gene expression is the observed product of a specific gene (mRNA). Abnormal gene expression in cancer cells may be due to DNA mutations.
+The OncoType DX® Test gives information about prognosis (how likely the tumor will spread to other parts of the body).  It also helps physicians determine whether patients with early-stage invasive breast cancer will benefit from chemotherapy (in addition to hormone blocking therapy or hormone blocking therapy alone).
 
-        <h2>Conducting the HER2 FISH Test:</h2>
-            <div class="svg-container">
-                <img src="images/doctor_and_microscope2.jpg" alt="cell biopsy slide 3" />
-                <div class="svg-text full">
-                    <p>
-                      <strong>Step 4</strong>
-  The medium that contains the fluorescent dye is applied to the slide.
-                    </p>
-                      <span class="left-arrow"><a data-navigate="patient1view26" >&#8594;</a></span>
 
-                </div>
-            </div>
+</p>
+
+
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view24" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view28" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
                   </div>
                   <div class="col-md-4">
-                    <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view30"  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
