--- a/src/javascript/templates/patient1/patient1View30.hbs
+++ b/src/javascript/templates/patient1/patient1View30.hbs
@@ -51,31 +51,31 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Velma’s doctors have sent her tissue sample for HER2 FISH testing.        </blockquote>
-        <main id="content-main" class="row patient-1 svg-test">
+OncoType DX® Test: A sample of breast tumor is analyzed for the expression of a set of 21 genes.
+       </blockquote>
+        <main id="content-main" class="row patient-1">
+<p>
+Based on the expression of 21 selected genes, a recurrence score is generated and ranges from 0-100.
+The higher the Recurrence Score, the greater the chance that the breast cancer will come back and the
+ more likely a patient will benefit from chemotherapy. <br><br>
+     <strong>What the Score Means</strong>
+<strong>Lower than 18:</strong>  Low risk of recurrence with hormone therapy.  Risk of side effects from chemotherapy outweigh potential benefits to patient.<br>
+<strong>Between 18 and 30:</strong>  Intermediate risk of recurrence with hormone therapy.  Unknown whether benefits of chemotherapy outweigh risk of side effects.<br>
+<strong>Greater than 30:</strong>  High risk of recurrence with hormone therapy alone.  Benefits of chemotherapy outweigh risk of side effects.
 
-        <h2>Conducting the HER2 FISH Test:</h2>
-            <div class="svg-container">
-                <img src="images/doctor_and_microscope2.jpg" alt="cell biopsy slide 3" />
-                <div class="svg-text full">
-                    <p>
-                      <strong>Step 4</strong>
-  The medium that contains the fluorescent dye is applied to the slide.
-                    </p>
-                      <span class="left-arrow"><a data-navigate="patient1view26" >&#8594;</a></span>
+</p>
 
-                </div>
-            </div>
+
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view24" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view29" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
                   </div>
                   <div class="col-md-4">
-                    <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view31"  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
