--- a/src/javascript/templates/patient1/patient1View32.hbs
+++ b/src/javascript/templates/patient1/patient1View32.hbs
@@ -51,25 +51,28 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Velma’s doctors have sent her tissue sample for HER2 FISH testing.        </blockquote>
+  Velma’s doctors have sent her tissue sample for OncoType DX® testing.
+
+       </blockquote>
         <main id="content-main" class="row patient-1 svg-test">
 
-        <h2>Conducting the HER2 FISH Test:</h2>
+        <h2>Conducting the test:</h2>
             <div class="svg-container">
-                <img src="images/doctor_and_microscope2.jpg" alt="cell biopsy slide 3" />
+                <img src="images/onco_test.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
                     <p>
-                      <strong>Step 4</strong>
-  The medium that contains the fluorescent dye is applied to the slide.
-                    </p>
-                      <span class="left-arrow"><a data-navigate="patient1view26" >&#8594;</a></span>
+                      <strong>Step 3</strong>
+  An automated multi-gene analysis is conducted on the selected 21 genes.
+  </p>
+                      <span class="left-arrow"><a data-navigate="patient1view33" >&#8594;</a></span>
 
                 </div>
+
             </div>
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view24" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view31" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
