--- a/src/javascript/templates/patient1/patient1View33.hbs
+++ b/src/javascript/templates/patient1/patient1View33.hbs
@@ -51,31 +51,58 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Velma’s doctors have sent her tissue sample for HER2 FISH testing.        </blockquote>
+  Velma’s doctors have sent her tissue sample for OncoType DX® testing.
+
+       </blockquote>
         <main id="content-main" class="row patient-1 svg-test">
 
-        <h2>Conducting the HER2 FISH Test:</h2>
+        <h2>Conducting the test:</h2>
             <div class="svg-container">
-                <img src="images/doctor_and_microscope2.jpg" alt="cell biopsy slide 3" />
+                <img src="images/doctor_with_clipboard.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
                     <p>
                       <strong>Step 4</strong>
-  The medium that contains the fluorescent dye is applied to the slide.
-                    </p>
-                      <span class="left-arrow"><a data-navigate="patient1view26" >&#8594;</a></span>
+   A score is calculated.
+
+  </p>
+                      <span class="left-arrow"><a href="startview2" data-navigate="startview2">&#8594;</a></span>
 
                 </div>
+
             </div>
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view24" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view32" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
                   </div>
                   <div class="col-md-4">
-                    <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a class="continue next"><button type="button" data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                      <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                          <div class="modal-body">
+                          <h2>Velma’s OncoType DX® Test results are in!</h2>
+                          <p><span class="pink-hl">Velma Belt’s OncoType DX® Test Results: 10</span><br><br>
+
+
+This score indicates that chemotherapy is NOT beneficial and should not be a part of Velma’s treatment plan. She only requires hormone blocking therapy.
+<br><br>
+
+Be sure to record the results in your Lab Handbook.</p>
+
+                          </div>
+                          <div class="modal-footer background-nav-blue">
+                            <a data-navigate="patient1view34" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
             </div>
