--- a/src/javascript/templates/patient1/patient1View35.hbs
+++ b/src/javascript/templates/patient1/patient1View35.hbs
@@ -51,31 +51,26 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Velma’s doctors have sent her tissue sample for HER2 FISH testing.        </blockquote>
-        <main id="content-main" class="row patient-1 svg-test">
-
-        <h2>Conducting the HER2 FISH Test:</h2>
-            <div class="svg-container">
-                <img src="images/doctor_and_microscope2.jpg" alt="cell biopsy slide 3" />
-                <div class="svg-text full">
+Putting it All Together: The HER2 FISH Test
+       </blockquote>
+        <main id="content-main" class="row patient-1">
                     <p>
-                      <strong>Step 4</strong>
-  The medium that contains the fluorescent dye is applied to the slide.
-                    </p>
-                      <span class="left-arrow"><a data-navigate="patient1view26" >&#8594;</a></span>
+If the HER2 FISH results return as amplified, the physician will likely recommend a HER2-targeted therapy.
+                      <strong>Velma’s HER2 FISH test score showed that her HER2 oncogene is Not Amplified.</strong>
+ </p>
+<figure>  <img src="images/test_tubes_and_data_sheets.jpg" alt="cell biopsy slide 3" /></figure>
 
-                </div>
-            </div>
+
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view24" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view34" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
                   </div>
                   <div class="col-md-4">
-                    <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view36"  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
