--- a/src/javascript/templates/patient1/patient1View36.hbs
+++ b/src/javascript/templates/patient1/patient1View36.hbs
@@ -51,31 +51,33 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Velma’s doctors have sent her tissue sample for HER2 FISH testing.        </blockquote>
-        <main id="content-main" class="row patient-1 svg-test">
+Putting it All Together: The OncoType DX® Test       </blockquote>
+        <main id="content-main" class="row patient-1">
 
-        <h2>Conducting the HER2 FISH Test:</h2>
-            <div class="svg-container">
-                <img src="images/doctor_and_microscope2.jpg" alt="cell biopsy slide 3" />
-                <div class="svg-text full">
+
+
+
                     <p>
-                      <strong>Step 4</strong>
-  The medium that contains the fluorescent dye is applied to the slide.
-                    </p>
-                      <span class="left-arrow"><a data-navigate="patient1view26" >&#8594;</a></span>
+                    The OncoType DX ® Test score range indicates one of the following treatment approaches:<br>
+<strong>Under 18:</strong> Hormone blocking therapy only<br>
+<strong>From 18 to 31:</strong> Hormone blocking  therapy, chemotherapy may or may not be necessary<br>
+<strong>Over 31:</strong> Both chemotherapy and Hormone blocking  therapy
 
-                </div>
-            </div>
+<strong>Velma’s score was 10. </strong>
+ </p>
+<figure>  <img src="images/test_tubes_and_data_sheets.jpg" alt="cell biopsy slide 3" /></figure>
+
+
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view24" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view35" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
                   </div>
                   <div class="col-md-4">
-                    <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view37"  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
