--- a/src/javascript/templates/patient1/patient1View37.hbs
+++ b/src/javascript/templates/patient1/patient1View37.hbs
@@ -51,31 +51,54 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Velma’s doctors have sent her tissue sample for HER2 FISH testing.        </blockquote>
-        <main id="content-main" class="row patient-1 svg-test">
+Recommend a treatment plan for Velma.     </blockquote>
+        <main id="content-main" class="row patient-1">
+    <p>
+  Use the notes from your Lab Handbook to recommend a personalized treatment plan for Velma Belt.
+Select one of the following options:
+ Hormone blocking therapy only
+ Hormone blocking therapy and chemotherapy
+ HER2-targeted therapy and chemotherapy
+ Hormone blocking  therapy, HER2-targeted therapy, and chemotherapy
+You may change your recommendation before getting an update on your patient’s status.
+Once you are done with your recommendation, you can review your patient’s status.
 
-        <h2>Conducting the HER2 FISH Test:</h2>
-            <div class="svg-container">
-                <img src="images/doctor_and_microscope2.jpg" alt="cell biopsy slide 3" />
-                <div class="svg-text full">
-                    <p>
-                      <strong>Step 4</strong>
-  The medium that contains the fluorescent dye is applied to the slide.
-                    </p>
-                      <span class="left-arrow"><a data-navigate="patient1view26" >&#8594;</a></span>
+Student makes a selection.  Feedback given.
 
-                </div>
-            </div>
+Be sure to record the information in your Lab Handbook.
+
+ </p>
+<figure>  <img src="images/test_tubes_and_data_sheets.jpg" alt="cell biopsy slide 3" /></figure>
+
+
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view24" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view36" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
                   </div>
                   <div class="col-md-4">
-                    <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a class="continue next"><button type="button" data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                      <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                          <div class="modal-body">
+                          <p>
+                          Following her treatment, physicians will monitor Velma to determine whether or not her breast cancer has returned.  If the cancer does not recur, the treatment approach was successful.  If her breast cancer recurs, the treatment approach was not successful.
+<strong>As a result of hormonal therapy, Velma has not experienced a recurrence of breast cancer.  Success!</strong>
+                          </p>
+                          </div>
+                          <div class="modal-footer background-nav-blue">
+                            <a data-navigate="startview2" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
             </div>
